Added user view... is the site done?!
