# service/api/api-handler.go
@@ -13,9 +13,11 @@ func (rt *_router) Handler() http.Handler {
 
 	rt.router.PUT("/users/:user-name/bans/:other-name", rt.authWrap(rt.banUser))
 	rt.router.DELETE("/users/:user-name/bans/:other-name", rt.authWrap(rt.unbanUser))
+	rt.router.GET("/users/:user-name/bans/:other-name", rt.authWrap(rt.checkBan))
 
 	rt.router.PUT("/users/:user-name/follows/:other-name", rt.authWrap(rt.followUser))
 	rt.router.DELETE("/users/:user-name/follows/:other-name", rt.authWrap(rt.unfollowUser))
+	rt.router.GET("/users/:user-name/follows/:other-name", rt.authWrap(rt.checkFollow))
 
 	rt.router.GET("/users/:user-name", rt.authWrap(rt.getUserProfile))
 	rt.router.GET("/users/:user-name/stream", rt.authWrap(rt.getMyStream))
